--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 .terrafrom/*
 .terrafrom.lock.hcl
+.terraform/providers/registry.terraform.io/hashicorp/http/3.4.4/windows_amd64/terraform-provider-http_v3.4.4_x5.exe
+.terraform.lock.hcl
+.terraform/providers/registry.terraform.io/hashicorp/http/3.4.4/windows_amd64/LICENSE.txt
+.terraform/providers/registry.terraform.io/hashicorp/aws/4.67.0/windows_amd64/terraform-provider-aws_v4.67.0_x5.exe
+.terraform/terraform.tfstate
